--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,3 +10,13 @@ body
   background-color: #131313;
   background-size: 20px 20px;
 }
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  display: inline;
+}
