--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,9 +1,8 @@
 <header>
-  <nav>
-      <ul>
-        <li a href="">Projects</li>
-        <li a href="">Posts</li>
-        <li a href="">About</li>
-      </ul>
-  </nav>
+ <ul>
+  <li><a class="active" href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li><a href="#about">About</a></li>
+</ul>
 </header>
