--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,8 +15,15 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 
 li {
-  display: inline;
+  float: left;
+}
+
+li a {
+  display: block;
+  padding: 8px;
+  background-color: #dddddd;
 }
